Fix so that workers walking offroad can't go through large (mineable) stones.